--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/logo.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500;600&display=swap" rel="stylesheet" link=preconnect crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Olimpiu Portfolio</title>
   </head>
