--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/logo.png" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500;600&display=swap" rel="stylesheet" link=preconnect crossorigin>
-  
   <!-- meta tags-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="keywords" content="Olimpiu Seulean, javascript, vuejs, vue, frontend, developer, oliseulean" />
+  <meta name="keywords" content="Olimpiu Seulean, javascript, vuejs, vue, frontend, engineer, developer, oliseulean" />
   <meta name="description" content="Personal Portfolio Website - Olimpiu Seulean">
   <meta name="author" content="Olimpiu Seulean">
-  <title>Olimpiu Seulean - Frontend Developer</title>
-
+  <title>Olimpiu Seulean - Frontend Engineer</title>
 </head>
 
 <body>
