--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/logo.png" />
+  <link rel="icon" href="/logo.webp" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500;600&display=swap" rel="stylesheet" link=preconnect crossorigin>
   <!-- meta tags-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
