--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/profile.webp" />
+  <meta name="theme-color" content="#334155">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500;600&display=swap" rel="stylesheet" link="preconnect" crossorigin>
   <!-- meta tags-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
