--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/profile.webp" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500;600&display=swap" rel="stylesheet" link="preconnect" crossorigin>
+  <link rel="apple-touch-icon" href="/profile.webp">
   <!-- meta tags-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#334155">
   <meta name="keywords" content="Olimpiu Seulean, javascript, vuejs, vue, frontend, engineer, developer, oliseulean" />
   <meta name="description" content="Personal Portfolio Website - Olimpiu Seulean">
   <meta name="author" content="Olimpiu Seulean">
   <title>Olimpiu Seulean - Frontend Engineer</title>
-  <script type="module" crossorigin src="/oli.portfolio-v1.0.2.js"></script>
+  <script type="module" crossorigin src="/oli.portfolio-v1.0.3.js"></script>
 </head>
 
 <body>
