--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-232885625-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { window.dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-232885625-1');
+  </script>
   <meta charset="UTF-8" />
   <link rel="icon" href="/profile.webp" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500;600&display=swap" rel="stylesheet" link="preconnect" crossorigin>
@@ -13,7 +22,7 @@
   <meta name="description" content="Personal Portfolio Website - Olimpiu Seulean">
   <meta name="author" content="Olimpiu Seulean">
   <title>Olimpiu Seulean - Frontend Engineer</title>
-  <script type="module" crossorigin src="/oli.portfolio-v1.0.3.js"></script>
+  <script type="module" crossorigin src="/oli.portfolio-v1.1.0.js"></script>
 </head>
 
 <body>
