Rewrite the avatar @hover logic and clean-up.

--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-232885625-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() { window.dataLayer.push(arguments); }
-    gtag('js', new Date());
 
+    function gtag() {
+      window.dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
     gtag('config', 'UA-232885625-1');
   </script>
   <meta charset="UTF-8" />
   <link rel="icon" href="/profile.webp" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500;600&display=swap" rel="stylesheet" link="preconnect" crossorigin>
-  <link rel="apple-touch-icon" href="/profile.webp">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500;600&display=swap" rel="stylesheet" crossorigin />
+  <link rel="apple-touch-icon" href="/profile.webp" />
+
   <!-- meta tags-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#334155">
+  <meta name="theme-color" content="#334155" />
   <meta name="keywords" content="Olimpiu Seulean, javascript, vuejs, vue, frontend, engineer, developer, oliseulean" />
-  <meta name="description" content="Personal Portfolio Website - Olimpiu Seulean">
-  <meta name="author" content="Olimpiu Seulean">
+  <meta name="description" content="Personal Portfolio Website - Olimpiu Seulean" />
+  <meta name="author" content="Olimpiu Seulean" />
   <title>Olimpiu Seulean - Frontend Engineer</title>
 </head>
 
