clean-up and added ld+json for the html file.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-232885625-1"></script>
@@ -13,7 +14,8 @@
   </script>
   <meta charset="UTF-8" />
   <link rel="icon" href="/profile.webp" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500;600&display=swap" rel="stylesheet" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500;600&display=swap"
+    rel="stylesheet" crossorigin />
   <link rel="apple-touch-icon" href="/profile.webp" />
 
   <!-- meta tags-->
@@ -23,6 +25,21 @@
   <meta name="description" content="Personal Portfolio Website - Olimpiu Seulean" />
   <meta name="author" content="Olimpiu Seulean" />
   <title>Olimpiu Seulean - Frontend Engineer</title>
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Website",
+      "name": "Olimpiu Seulean",
+      "author": {
+        "@type": "Person",
+        "name": "Olimpiu Seulean"
+      },
+      "description": "Personal Portfolio Website - Olimpiu Seulean",
+      "publisher": "Olimpiu Seulean",
+      "url": "https://oliseulean.github.io/"
+    }
+  </script>
 </head>
 
 <body>
