--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       "url": "https://oliseulean.github.io/"
     }
   </script>
-  <script type="module" crossorigin src="/oli.portfolio-v4.1.0.js"></script>
+  <script type="module" crossorigin src="/oli.portfolio-v4.2.0.js"></script>
 </head>
 
 <body>
@@ -49,3 +49,9 @@
 </body>
 
 </html>
+
+<style>
+body {
+  margin: 0;
+}
+</style>
